--- a/index.html
+++ b/index.html
@@ -6,16 +6,7 @@
 </head>
 <body>
 	<ol>
-		<li>dev version</li>
-		<li>2th</li>
-		<li>3th</li>
-		<li>4th</li>
-		<li>dev branch</li>
-		<li>remote push</li>
-		<li>pull</li>
-		<li>dev push</li>
-		<li>dev push 2th</li>
-		<li>merge test</li>
+		<li>push remote</li>
 	</ol>
 </body>
 </html>
