--- a/index.html
+++ b/index.html
@@ -2,20 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>example!!!</title>
+	<title>example</title>
 </head>
 <body>
 	<ol>
-		<li>dev version</li>
-		<li>2th</li>
-		<li>3th</li>
-		<li>4th</li>
-		<li>dev branch</li>
-		<li>remote push</li>
-		<li>pull</li>
-		<li>dev push</li>
-		<li>dev push 2th</li>
-		<li>branch dev</li>
+		<li>dev version!!!</li>
 	</ol>
 </body>
 </html>
