--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>example!!!</title>
+	<title>example</title>
 </head>
 <body>
 	<ol>
-		<li>push remote</li>
+		<li>live verision</li>
 	</ol>
 </body>
 </html>
